attached_assets/Pasted-root-pf-var-www-html-public-prop-listing-npm-run-build-_1781641524266.txt
root@pf:/var/www/html/public/prop-listing# npm run build

> rest-express@1.0.0 build
> tsx script/build.ts

building client with base path /listing/ ...
vite v8.0.16 building client environment for production...
transforming (1648) ../node_modules/@floating-ui/utils/dist/floating-ui.utils.dom.mjs
A PostCSS plugin did not pass the `from` option to `postcss.parse`. This may cause imported assets to be incorrectly transformed. If you've recently added a PostCSS plugin that raised this warning, please contact the package author to fix the issue.
✓ 1651 modules transformed.
✗ Build failed in 2.90s
Build failed with 1 error:

[plugin vite:css-post]
SyntaxError: [lightningcss minify] Invalid state
2892 |  }
2893 |
2894 |  .after\:border.toggle-elevate::after::before {
     |                                              ^
2895 |      content: var(--tw-content);
2896 |      inset: -1px;
    at Module.<anonymous> (/var/www/html/public/prop-listing/node_modules/lightningcss/node/index.js:56:14)
    at minifyCSS (/var/www/html/public/prop-listing/node_modules/vite/dist/node/chunks/node.js:21424:59)
    at async finalizeCss (/var/www/html/public/prop-listing/node_modules/vite/dist/node/chunks/node.js:21269:36)
    at async Promise.all (index 1)
    at async Object.run (/var/www/html/public/prop-listing/node_modules/vite/dist/node/chunks/node.js:2436:22)
    at async PluginContextImpl.renderChunk (/var/www/html/public/prop-listing/node_modules/vite/dist/node/chunks/node.js:20802:19)
    at async plugin (file:///var/www/html/public/prop-listing/node_modules/rolldown/dist/shared/bindingify-input-options-ClrST5Xx.mjs:1290:16)
    at async plugin.<computed> (file:///var/www/html/public/prop-listing/node_modules/rolldown/dist/shared/bindingify-input-options-ClrST5Xx.mjs:1625:12)
    at aggregateBindingErrorsIntoJsError (file:///var/www/html/public/prop-listing/node_modules/rolldown/dist/shared/error-BuvQYXuZ.mjs:48:18)
    at unwrapBindingResult (file:///var/www/html/public/prop-listing/node_modules/rolldown/dist/shared/error-BuvQYXuZ.mjs:18:128)
    at RolldownBuild.#build (/var/www/html/public/prop-listing/node_modules/rolldown/dist/shared/rolldown-build-CrPk_lZe.mjs:3246:34)
    at async buildEnvironment (/var/www/html/public/prop-listing/node_modules/vite/dist/node/chunks/node.js:33253:64)
    at async Object.build (/var/www/html/public/prop-listing/node_modules/vite/dist/node/chunks/node.js:33675:19)
    at async buildAll (/var/www/html/public/prop-listing/script/build.ts:9:3) {
  errors: [Getter/Setter]
}
